[tool.poetry]
name = "training-script"
version = "0.1.0"
description = ""
authors = ["takaoka.youta <takaoka.youta@opst.co.jp>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
torch = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
